--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./index.js",
     "start": "node ./index.js"
+  }, 
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Antarctic-Code/pointlist.git"
   },
   "author": "Jogre",
   "license": "ISC",
